Imrpove RAG search